# RustPress

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  MASTERPLAN.md  Makefile  README.ja.md  README.md  audit.toml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  webpack.config.js
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/rustpress-admin/: Cargo.toml
crates/rustpress-admin/src/: comments.rs  lib.rs  media.rs  plugins.rs  posts.rs  taxonomies.rs  users.rs
crates/rustpress-api/: Cargo.toml
crates/rustpress-api/src/: application_passwords.rs  autosaves.rs  batch.rs  block_patterns.rs  block_renderer.rs  block_types.rs  categories.rs  comments.rs  common.rs  discovery.rs  global_styles.rs  lib.rs  media.rs  menus.rs  navigation.rs  oembed.rs  pages.rs  post_types.rs  posts.rs  revisions.rs  search.rs  settings.rs  statuses.rs  tags.rs  taxonomies.rs  templates.rs  themes.rs  users.rs  wp_plugins.rs  wp_widgets.rs
crates/rustpress-auth/: Cargo.toml
crates/rustpress-auth/src/: audit.rs  jwt.rs  jwt_blacklist.rs  lib.rs  middleware.rs  oauth.rs  password.rs  rate_limit.rs  roles.rs  saml.rs  session.rs  totp.rs
crates/rustpress-blocks/: Cargo.toml
crates/rustpress-blocks/src/: core_blocks.rs  lib.rs  parser.rs  registry.rs  renderer.rs  serializer.rs
crates/rustpress-cache/: Cargo.toml
crates/rustpress-cache/src/: lib.rs  object_cache.rs  page_cache.rs  redis_cache.rs  transients.rs
crates/rustpress-cli/: Cargo.toml
crates/rustpress-cli/src/: main.rs
crates/rustpress-commerce/: Cargo.toml
crates/rustpress-commerce/src/: cart.rs  checkout.rs  coupon.rs  inventory.rs  lib.rs  order.rs  payment.rs  product.rs  shipping.rs  tax.rs  woo_compat.rs
crates/rustpress-core/: Cargo.toml
crates/rustpress-core/src/: error.rs  hooks.rs  kses.rs  lib.rs  mail.rs  media_sizes.rs  nonce.rs  php_serialize.rs  post_type.rs  rewrite.rs  shortcode.rs  taxonomy.rs  types.rs
crates/rustpress-core/src/blocks/: buttons.rs  code.rs  columns.rs  cover.rs  embed.rs  group.rs  heading.rs  html.rs  image.rs  list.rs  media_text.rs  mod.rs  paragraph.rs  quote.rs  separator.rs  spacer.rs
crates/rustpress-cron/: Cargo.toml
crates/rustpress-cron/src/: lib.rs
crates/rustpress-db/: Cargo.toml
crates/rustpress-db/src/: connection.rs  lib.rs  options.rs  queries.rs  revisions.rs
crates/rustpress-db/src/entities/: mod.rs  wc_order_itemmeta.rs  wc_order_items.rs  wp_commentmeta.rs  wp_comments.rs  wp_links.rs  wp_options.rs  wp_postmeta.rs  wp_posts.rs  wp_term_relationships.rs  wp_term_taxonomy.rs  wp_termmeta.rs  wp_terms.rs  wp_usermeta.rs  wp_users.rs
crates/rustpress-e2e/: Cargo.toml
crates/rustpress-e2e/src/: lib.rs
crates/rustpress-e2e/tests/: admin_selenium.rs  api_comparison.rs  frontend_comparison.rs  headers_comparison.rs  visual_comparison.rs
crates/rustpress-fields/: Cargo.toml
crates/rustpress-fields/src/: acf_compat.rs  api.rs  field_group.rs  field_types.rs  lib.rs  storage.rs
crates/rustpress-forms/: Cargo.toml
crates/rustpress-forms/src/: builder.rs  cf7_compat.rs  lib.rs  notification.rs  renderer.rs  submission.rs  validation.rs
crates/rustpress-i18n/: Cargo.toml
crates/rustpress-i18n/src/: lib.rs  locale.rs  mo_parser.rs  plural.rs  translator.rs
crates/rustpress-migrate/: Cargo.toml
crates/rustpress-migrate/src/: analyze.rs  lib.rs  rewrites.rs
crates/rustpress-multisite/: Cargo.toml
crates/rustpress-multisite/src/: lib.rs  network.rs  routing.rs  switch.rs  tables.rs
crates/rustpress-plugins/: Cargo.toml
crates/rustpress-plugins/src/: lib.rs  loader.rs  registry.rs  wasm_host.rs
crates/rustpress-query/: Cargo.toml
crates/rustpress-query/src/: comment_query.rs  lib.rs  meta_query.rs  post_query.rs  tax_query.rs  term_query.rs  user_query.rs
crates/rustpress-security/: Cargo.toml
crates/rustpress-security/src/: audit_log.rs  headers.rs  lib.rs  login_protection.rs  rate_limiter.rs  scanner.rs  ssrf.rs  tests.rs  waf.rs  wordfence_compat.rs
crates/rustpress-seo/: Cargo.toml
crates/rustpress-seo/src/: analysis.rs  lib.rs  meta_tags.rs  open_graph.rs  robots.rs  schema.rs  sitemap.rs  yoast_compat.rs
crates/rustpress-server/: Cargo.toml
crates/rustpress-server/src/: admin.rs  config.rs  error.rs  i18n.rs  main.rs  media.rs  middleware.rs  nav_menu.rs  state.rs  telemetry.rs  templates.rs  widgets.rs
crates/rustpress-server/src/routes/: auth.rs  commerce.rs  forms.rs  frontend.rs  health.rs  metrics.rs  mod.rs  plugin_admin.rs  posts.rs  seo.rs  users.rs  wasm_plugins.rs  wc_api.rs  wp_admin.rs  wp_admin.rs.bak  xmlrpc.rs
crates/rustpress-themes/: Cargo.toml
crates/rustpress-themes/src/: engine.rs  formatting.rs  hierarchy.rs  lib.rs  tags.rs  theme_json.rs  wp_head.rs
docker/: wordpress-init.php
docker/mysql-init/: 01-create-databases.sql
docs/: ARCHITECTURE.md  plugin-schema-survey.md  security-checklist.md  theme-compat-matrix.md
docs/adr/: 001-php-bridge-mode.en.md  001-php-bridge-mode.md  README.md
docs/instructions/: 00-workflow.md  01-theme-compat.md  02-api-migration.md  03-security.md  04-php-to-rust.md  05-cobol-to-rust.md  06-cpp-to-rust.md  07-java-to-rust.md  08-perl-to-rust.md  09-qa-reviewer.md  beta-sprint-01-theme.md  beta-sprint-03-security.md  beta-sprint-04-php-oss.md  beta-sprint-05-cobol-oss.md  beta-sprint-06-cpp-oss.md  beta-sprint-07-java-oss.md  beta-sprint-08-perl-oss.md  gutenberg-01-theme.md  (+1 more)
languages/: ja.json
results/: qa-sprint-04.md  qa-sprint-05-prep.md  qa-sprint-06-tt17.md
reviews/: qa-review-pr4.md  qa-review-pr5.md  qa-review-pr6.md
scripts/: api-compat-test.sh
static/: style.css  wp-block-library.css
templates/: 404.html  archive.html  attachment.html  author.html  base.html  category.html  comment-thread.html  date.html  footer.html  front-page.html  header.html  home.html  index.html  page.html  password-form.html  search.html  single.html  tag.html
tests/: run_e2e.sh
(+230 files in other folders)
