[workspace]
resolver = "2"
members = [
    "crates/rustpress-core",
    "crates/rustpress-db",
    "crates/rustpress-query",
    "crates/rustpress-auth",
    "crates/rustpress-themes",
    "crates/rustpress-api",
    "crates/rustpress-admin",
    "crates/rustpress-plugins",
    "crates/rustpress-migrate",
    "crates/rustpress-cache",
    "crates/rustpress-cron",
    "crates/rustpress-server",
    "crates/rustpress-cli",
    "crates/rustpress-e2e",
    "crates/rustpress-seo",
    "crates/rustpress-forms",
    "crates/rustpress-fields",
    "crates/rustpress-multisite",
    "crates/rustpress-commerce",
    "crates/rustpress-security",
    "crates/rustpress-i18n",
    "crates/rustpress-blocks",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "GPL-2.0"
description = "RustPress - A WordPress-compatible CMS built in Rust"

[workspace.metadata.wp-compat]
wordpress-db-schema = "6.9"
target-compat = "full"
phase = "8"

[workspace.dependencies]
# Internal crates
rustpress-core = { path = "crates/rustpress-core" }
rustpress-db = { path = "crates/rustpress-db" }
rustpress-query = { path = "crates/rustpress-query" }
rustpress-auth = { path = "crates/rustpress-auth" }
rustpress-themes = { path = "crates/rustpress-themes" }
rustpress-api = { path = "crates/rustpress-api" }
rustpress-admin = { path = "crates/rustpress-admin" }
rustpress-plugins = { path = "crates/rustpress-plugins" }
rustpress-migrate = { path = "crates/rustpress-migrate" }
rustpress-cache = { path = "crates/rustpress-cache" }
rustpress-cron = { path = "crates/rustpress-cron" }
rustpress-seo = { path = "crates/rustpress-seo" }
rustpress-forms = { path = "crates/rustpress-forms" }
rustpress-fields = { path = "crates/rustpress-fields" }
rustpress-multisite = { path = "crates/rustpress-multisite" }
rustpress-security = { path = "crates/rustpress-security" }
rustpress-i18n = { path = "crates/rustpress-i18n" }
rustpress-blocks = { path = "crates/rustpress-blocks" }
rustpress-commerce = { path = "crates/rustpress-commerce" }

# Web framework
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs", "compression-gzip", "set-header"] }
tower = "0.5"

# ORM (MySQL for WP database compatibility)
sea-orm = { version = "1.1", features = [
    "sqlx-mysql",
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
] }

# Template engine
tera = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
chrono = { version = "0.4", features = ["serde"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
bcrypt = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }

# Logging / tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Observability
opentelemetry = { version = "0.27", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.27", features = ["trace", "metrics", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "metrics", "tonic", "grpc-tonic"] }
opentelemetry-semantic-conventions = "0.27"
tracing-opentelemetry = "0.28"
sentry = { version = "0.34", features = ["tokio", "tracing", "tower"] }
sentry-tracing = "0.34"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# Error handling
anyhow = "1"
thiserror = "2"

# Configuration
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }

# Cache
moka = { version = "0.12", features = ["future", "sync"] }

# Hashing
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
data-encoding = "2"

# Random number generation
rand = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# XML processing
quick-xml = { version = "0.36", features = ["serialize"] }

# Base64 encoding/decoding (for XML-RPC media upload)
base64 = "0.22"

# Async
async-trait = "0.1"

# Regex
regex = "1"

# Image processing
image = "0.25"

# MIME type detection (magic bytes)
infer = "0.16"

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# WASM runtime
wasmtime = { version = "42", default-features = false, features = ["cranelift", "runtime"] }
wat = "1"
