[package]
name = "rustpress-admin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Admin dashboard API for RustPress"

[dependencies]
rustpress-core = { workspace = true }
rustpress-db = { workspace = true }
rustpress-query = { workspace = true }
rustpress-auth = { workspace = true }
rustpress-plugins = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
