[package]
name = "rustpress-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WordPress REST API compatible endpoints for RustPress"

[dependencies]
rustpress-core = { workspace = true }
rustpress-db = { workspace = true }
rustpress-query = { workspace = true }
rustpress-auth = { workspace = true }
rustpress-themes = { workspace = true }
axum = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
md-5 = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
