[package]
name = "rustpress-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Authentication, sessions, and role management for RustPress"

[dependencies]
rustpress-core = { workspace = true }
rustpress-db = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
bcrypt = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
md-5 = { workspace = true }
moka = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
data-encoding = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
quick-xml = { workspace = true }
base64 = { workspace = true }
