[package]
name = "rustpress-blocks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Gutenberg block registry and renderer for RustPress"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
