[package]
name = "rustpress-cache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Object cache, page cache, and transients for RustPress"

[features]
default = []
redis-backend = ["redis"]

[dependencies]
rustpress-core = { workspace = true }
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
redis = { workspace = true, optional = true }
