[package]
name = "rustpress-commerce"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "E-commerce plugin for RustPress - products, cart, orders, and payments"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
