[package]
name = "rustpress-cron"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WordPress-compatible cron/scheduled tasks for RustPress (wp-cron.php equivalent)"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
