[package]
name = "rustpress-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WordPress-compatible database entities and connection for RustPress"

[dependencies]
rustpress-core = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
