[package]
name = "rustpress-e2e"
version = "0.1.0"
edition = "2021"
description = "End-to-end comparison tests: RustPress vs WordPress"

[dependencies]
tokio = { version = "1", features = ["full"] }
thirtyfour = "0.35"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.22"
similar = "2"
image = "0.25"
base64 = "0.22"
