[package]
name = "rustpress-fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Advanced Custom Fields for RustPress - custom field management"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
