[package]
name = "rustpress-forms"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Form builder and submission handler for RustPress"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
