[package]
name = "rustpress-multisite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WordPress multisite support for RustPress"

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
