[package]
name = "rustpress-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Plugin system with WASM runtime for RustPress"

[features]
default = []
wasm-runtime = ["wasmtime"]

[dependencies]
rustpress-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
wasmtime = { workspace = true, optional = true }

[dev-dependencies]
tempfile = "3"
wasmtime = { workspace = true }
wat = { workspace = true }
