[package]
name = "rustpress-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum HTTP server for RustPress"

[[bin]]
name = "rustpress"
path = "src/main.rs"

[dependencies]
rustpress-core = { workspace = true }
rustpress-db = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
