[package]
name = "rustpress-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Axum HTTP server for RustPress"

[[bin]]
name = "rustpress"
path = "src/main.rs"

[dependencies]
rustpress-core = { workspace = true }
rustpress-db = { workspace = true }
rustpress-query = { workspace = true }
rustpress-auth = { workspace = true }
rustpress-themes = { workspace = true }
rustpress-api = { workspace = true }
rustpress-admin = { workspace = true }
rustpress-plugins = { workspace = true }
rustpress-cache = { workspace = true }
rustpress-cron = { workspace = true }
rustpress-migrate = { workspace = true }
rustpress-security = { workspace = true }
rustpress-blocks = { workspace = true }
rustpress-seo = { workspace = true }
rustpress-i18n = { workspace = true }
rustpress-forms = { workspace = true }
rustpress-fields = { workspace = true }
rustpress-commerce = { workspace = true }
sea-orm = { workspace = true }
regex = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
tera = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
uuid = { workspace = true }
image = { workspace = true }
base64 = { workspace = true }
